--- a/required_modules.ipynb
+++ b/required_modules.ipynb
@@ -166,6 +166,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: statsmodels in c:\\users\\johan birgersson\\anaconda3\\lib\\site-packages (0.13.2)\n",
+      "Requirement already satisfied: numpy>=1.17 in c:\\users\\johan birgersson\\anaconda3\\lib\\site-packages (from statsmodels) (1.21.5)\n",
+      "Requirement already satisfied: scipy>=1.3 in c:\\users\\johan birgersson\\anaconda3\\lib\\site-packages (from statsmodels) (1.7.3)\n",
+      "Requirement already satisfied: pandas>=0.25 in c:\\users\\johan birgersson\\anaconda3\\lib\\site-packages (from statsmodels) (1.4.2)\n",
+      "Requirement already satisfied: patsy>=0.5.2 in c:\\users\\johan birgersson\\anaconda3\\lib\\site-packages (from statsmodels) (0.5.2)\n",
+      "Requirement already satisfied: packaging>=21.3 in c:\\users\\johan birgersson\\anaconda3\\lib\\site-packages (from statsmodels) (21.3)\n",
+      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in c:\\users\\johan birgersson\\anaconda3\\lib\\site-packages (from packaging>=21.3->statsmodels) (3.0.4)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\johan birgersson\\anaconda3\\lib\\site-packages (from pandas>=0.25->statsmodels) (2021.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\johan birgersson\\anaconda3\\lib\\site-packages (from pandas>=0.25->statsmodels) (2.8.2)\n",
+      "Requirement already satisfied: six in c:\\users\\johan birgersson\\anaconda3\\lib\\site-packages (from patsy>=0.5.2->statsmodels) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install statsmodels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'statsmodels' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\PythonGit\\DAT405\\required_modules.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/PythonGit/DAT405/required_modules.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m statsmodels \u001b[39m-\u001b[39mhelp\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'statsmodels' is not defined"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -174,7 +220,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 64-bit (microsoft store)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -188,12 +234,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "47c1660a6979f4713856904460468b867aaf409dd3a1e5cbffd09a2e9923d9f8"
+    "hash": "c9305d7bf1ef80e421818d604bdde9aa23cd61836c66dcb7f1e974c6a5a319e4"
    }
   }
  },
